@@ -8,14 +8,28 @@ import com.fptu.exe.skillswap.modules.blog.domain.BlogPost;
 import com.fptu.exe.skillswap.modules.blog.domain.BlogPostStatus;
 import com.fptu.exe.skillswap.modules.blog.domain.BlogVisibility;
 import com.fptu.exe.skillswap.modules.blog.dto.BlogCategoryResponse;
+import com.fptu.exe.skillswap.modules.blog.dto.BlogEngagementState;
+import com.fptu.exe.skillswap.modules.blog.dto.BlogFollowResponse;
 import com.fptu.exe.skillswap.modules.blog.dto.BlogPostCardResponse;
 import com.fptu.exe.skillswap.modules.blog.dto.BlogPostDetailResponse;
 import com.fptu.exe.skillswap.modules.blog.dto.BlogTagResponse;
 import com.fptu.exe.skillswap.modules.blog.dto.request.BlogAuthorCtaClickRequest;
 import com.fptu.exe.skillswap.modules.blog.dto.request.BlogViewRequest;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogBookmark;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogCategory;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogCategoryFollow;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogPostLike;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogTag;
+import com.fptu.exe.skillswap.modules.blog.domain.BlogTagFollow;
+import com.fptu.exe.skillswap.modules.blog.repository.BlogBookmarkRepository;
+import com.fptu.exe.skillswap.modules.blog.repository.BlogCategoryFollowRepository;
 import com.fptu.exe.skillswap.modules.blog.repository.BlogCategoryRepository;
 import com.fptu.exe.skillswap.modules.blog.repository.BlogPostRepository;
+import com.fptu.exe.skillswap.modules.blog.repository.BlogPostLikeRepository;
+import com.fptu.exe.skillswap.modules.blog.repository.BlogTagFollowRepository;
 import com.fptu.exe.skillswap.modules.blog.repository.BlogTagRepository;
+import com.fptu.exe.skillswap.modules.identity.domain.User;
+import com.fptu.exe.skillswap.modules.mentor.service.MentorBlogAuthorSummary;
 import com.fptu.exe.skillswap.modules.mentor.service.MentorContentAccessService;
 import com.fptu.exe.skillswap.modules.system.service.InternalTelemetryService;
 import com.fptu.exe.skillswap.shared.constant.RoleCode;
@@ -26,19 +40,26 @@ import com.fptu.exe.skillswap.shared.exception.BaseException;
 import com.fptu.exe.skillswap.shared.exception.ErrorCode;
 import com.fptu.exe.skillswap.shared.util.DateTimeUtil;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import jakarta.persistence.EntityManager;
 
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HexFormat;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -49,6 +70,10 @@ public class BlogService {
     private static final String DIRECTION_NEXT = "NEXT";
 
     private final BlogPostRepository blogPostRepository;
+    private final BlogPostLikeRepository blogPostLikeRepository;
+    private final BlogBookmarkRepository blogBookmarkRepository;
+    private final BlogCategoryFollowRepository blogCategoryFollowRepository;
+    private final BlogTagFollowRepository blogTagFollowRepository;
     private final BlogCategoryRepository blogCategoryRepository;
     private final BlogTagRepository blogTagRepository;
     private final BlogMapper blogMapper;
@@ -56,10 +81,16 @@ public class BlogService {
     private final BlogContentPolicy contentPolicy;
     private final MentorContentAccessService mentorContentAccessService;
     private final InternalTelemetryService internalTelemetryService;
+    private final EntityManager entityManager;
 
     private final Cache<String, Boolean> viewDedupeCache = Caffeine.newBuilder()
             .expireAfterWrite(30, TimeUnit.MINUTES)
             .maximumSize(100_000)
+            .build();
+
+    private final Cache<String, List<BlogPostCardResponse>> trendingCache = Caffeine.newBuilder()
+            .expireAfterWrite(10, TimeUnit.MINUTES)
+            .maximumSize(200)
             .build();
 
     @Transactional(readOnly = true)
@@ -96,7 +127,7 @@ public class BlogService {
                 ? encodeCursor(items.get(items.size() - 1).getPublishedAt(), items.get(items.size() - 1).getId(), filterHash)
                 : null;
         return CursorPageResponse.<BlogPostCardResponse>builder()
-                .items(items.stream().map(blogMapper::toCard).toList())
+                .items(mapCards(principal, items))
                 .nextCursor(nextCursor)
                 .prevCursor(null)
                 .hasNext(hasNext)
@@ -112,8 +143,46 @@ public class BlogService {
                 .stream()
                 .filter(post -> allowed.contains(post.getVisibility()))
                 .limit(Math.min(Math.max(limit, 1), 20))
-                .map(blogMapper::toCard)
-                .toList();
+                .collect(Collectors.collectingAndThen(Collectors.toList(), posts -> mapCards(principal, posts)));
+    }
+
+    @Transactional(readOnly = true)
+    public List<BlogPostCardResponse> trending(UserPrincipal principal, int limit) {
+        int resolvedLimit = Math.min(Math.max(limit, 1), 20);
+        List<BlogVisibility> allowed = allowedVisibilities(principal);
+        String key = "trending:" + allowed + ":" + resolvedLimit + ":" + userId(principal);
+        return trendingCache.get(key, ignored -> {
+            List<BlogPost> posts = blogPostRepository.findTrendingCandidates(
+                            BlogPostStatus.PUBLISHED,
+                            allowed,
+                            PageRequest.of(0, Math.max(resolvedLimit * 3, 20)))
+                    .stream()
+                    .limit(resolvedLimit)
+                    .toList();
+            return mapCards(principal, posts);
+        });
+    }
+
+    @Transactional(readOnly = true)
+    public List<BlogPostCardResponse> related(UserPrincipal principal, String slug, int limit) {
+        BlogPost source = blogPostRepository.findBySlug(slug)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy bài blog"));
+        ensureReadable(principal, source);
+        Set<UUID> categoryIds = source.getCategories().stream().map(category -> category.getId()).collect(Collectors.toSet());
+        Set<UUID> tagIds = source.getTags().stream().map(tag -> tag.getId()).collect(Collectors.toSet());
+        List<BlogPost> posts = blogPostRepository.findRelatedCandidates(
+                BlogPostStatus.PUBLISHED,
+                source.getId(),
+                allowedVisibilities(principal),
+                source.getVisibility(),
+                categoryIds.isEmpty() ? Set.of(new UUID(0L, 0L)) : categoryIds,
+                categoryIds.isEmpty(),
+                tagIds.isEmpty() ? Set.of(new UUID(0L, 0L)) : tagIds,
+                tagIds.isEmpty(),
+                source.getAudienceType(),
+                PageRequest.of(0, Math.min(Math.max(limit, 1), 12))
+        );
+        return mapCards(principal, posts);
     }
 
     @Transactional(readOnly = true)
@@ -121,7 +190,212 @@ public class BlogService {
         BlogPost post = blogPostRepository.findBySlug(slug)
                 .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy bài blog"));
         ensureReadable(principal, post);
-        return blogMapper.toDetail(post);
+        return blogMapper.toDetail(post, engagementState(principal, post.getId()), authorSummary(post));
+    }
+
+    @Transactional
+    public BlogPostDetailResponse like(UserPrincipal principal, UUID postId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        if (!blogPostLikeRepository.existsByPostIdAndUserId(postId, userId)) {
+            try {
+                blogPostLikeRepository.save(BlogPostLike.builder()
+                        .post(entityManager.getReference(BlogPost.class, postId))
+                        .user(entityManager.getReference(User.class, userId))
+                        .build());
+                blogPostRepository.incrementLikeCount(postId);
+                internalTelemetryService.record("BLOG_LIKE", userId, "BLOG_POST", postId, Map.of("slug", post.getSlug()));
+            } catch (DataIntegrityViolationException ignored) {
+                // Idempotent behavior for concurrent like requests.
+            }
+        }
+        return blogMapper.toDetail(loadPost(postId), engagementState(principal, postId), authorSummary(post));
+    }
+
+    @Transactional
+    public BlogPostDetailResponse unlike(UserPrincipal principal, UUID postId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        if (blogPostLikeRepository.existsByPostIdAndUserId(postId, userId)) {
+            blogPostLikeRepository.deleteByPostIdAndUserId(postId, userId);
+            blogPostRepository.decrementLikeCount(postId);
+        }
+        return blogMapper.toDetail(loadPost(postId), engagementState(principal, postId), authorSummary(post));
+    }
+
+    @Transactional
+    public BlogPostDetailResponse bookmark(UserPrincipal principal, UUID postId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        if (!blogBookmarkRepository.existsByPostIdAndUserId(postId, userId)) {
+            try {
+                blogBookmarkRepository.save(BlogBookmark.builder()
+                        .post(entityManager.getReference(BlogPost.class, postId))
+                        .user(entityManager.getReference(User.class, userId))
+                        .build());
+                blogPostRepository.incrementBookmarkCount(postId);
+                internalTelemetryService.record("BLOG_BOOKMARK", userId, "BLOG_POST", postId, Map.of("slug", post.getSlug()));
+            } catch (DataIntegrityViolationException ignored) {
+                // Idempotent behavior for concurrent bookmark requests.
+            }
+        }
+        return blogMapper.toDetail(loadPost(postId), engagementState(principal, postId), authorSummary(post));
+    }
+
+    @Transactional
+    public BlogPostDetailResponse unbookmark(UserPrincipal principal, UUID postId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        if (blogBookmarkRepository.existsByPostIdAndUserId(postId, userId)) {
+            blogBookmarkRepository.deleteByPostIdAndUserId(postId, userId);
+            blogPostRepository.decrementBookmarkCount(postId);
+        }
+        return blogMapper.toDetail(loadPost(postId), engagementState(principal, postId), authorSummary(post));
+    }
+
+    @Transactional(readOnly = true)
+    public CursorPageResponse<BlogPostCardResponse> myBookmarks(UserPrincipal principal, String cursor, Integer limit) {
+        UUID userId = requireAuthenticated(principal);
+        int resolvedLimit = resolveLimit(limit);
+        String filterHash = filterHash("blog-bookmarks|userId=" + userId);
+        DecodedCursor decodedCursor = decodeCursor(cursor, filterHash);
+        List<BlogBookmark> window = blogBookmarkRepository.findBookmarkWindow(
+                userId,
+                decodedCursor.sortTime(),
+                decodedCursor.postId(),
+                resolvedLimit + 1
+        );
+        boolean hasNext = window.size() > resolvedLimit;
+        List<BlogBookmark> items = hasNext ? window.subList(0, resolvedLimit) : window;
+        List<BlogPost> posts = items.stream().map(BlogBookmark::getPost).toList();
+        String nextCursor = hasNext && !items.isEmpty()
+                ? encodeCursor(items.get(items.size() - 1).getCreatedAt(), items.get(items.size() - 1).getPost().getId(), filterHash)
+                : null;
+        return CursorPageResponse.<BlogPostCardResponse>builder()
+                .items(mapCards(principal, posts))
+                .nextCursor(nextCursor)
+                .prevCursor(null)
+                .hasNext(hasNext)
+                .hasPrev(false)
+                .limit(resolvedLimit)
+                .build();
+    }
+
+    @Transactional
+    public BlogFollowResponse followCategory(UserPrincipal principal, UUID categoryId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogCategory category = loadActiveCategory(categoryId);
+        if (!blogCategoryFollowRepository.existsByUserIdAndCategoryId(userId, categoryId)) {
+            try {
+                blogCategoryFollowRepository.save(BlogCategoryFollow.builder()
+                        .user(entityManager.getReference(User.class, userId))
+                        .category(category)
+                        .build());
+                internalTelemetryService.record("BLOG_CATEGORY_FOLLOW", userId, "BLOG_CATEGORY", categoryId, Map.of("slug", category.getSlug()));
+            } catch (DataIntegrityViolationException ignored) {
+                // Idempotent behavior for concurrent follow requests.
+            }
+        }
+        return myFollows(principal);
+    }
+
+    @Transactional
+    public BlogFollowResponse unfollowCategory(UserPrincipal principal, UUID categoryId) {
+        UUID userId = requireAuthenticated(principal);
+        blogCategoryFollowRepository.deleteByUserIdAndCategoryId(userId, categoryId);
+        return myFollows(principal);
+    }
+
+    @Transactional
+    public BlogFollowResponse followTag(UserPrincipal principal, UUID tagId) {
+        UUID userId = requireAuthenticated(principal);
+        BlogTag tag = loadActiveTag(tagId);
+        if (!blogTagFollowRepository.existsByUserIdAndTagId(userId, tagId)) {
+            try {
+                blogTagFollowRepository.save(BlogTagFollow.builder()
+                        .user(entityManager.getReference(User.class, userId))
+                        .tag(tag)
+                        .build());
+                internalTelemetryService.record("BLOG_TAG_FOLLOW", userId, "BLOG_TAG", tagId, Map.of("slug", tag.getSlug()));
+            } catch (DataIntegrityViolationException ignored) {
+                // Idempotent behavior for concurrent follow requests.
+            }
+        }
+        return myFollows(principal);
+    }
+
+    @Transactional
+    public BlogFollowResponse unfollowTag(UserPrincipal principal, UUID tagId) {
+        UUID userId = requireAuthenticated(principal);
+        blogTagFollowRepository.deleteByUserIdAndTagId(userId, tagId);
+        return myFollows(principal);
+    }
+
+    @Transactional(readOnly = true)
+    public BlogFollowResponse myFollows(UserPrincipal principal) {
+        UUID userId = requireAuthenticated(principal);
+        List<BlogCategoryResponse> categories = blogCategoryFollowRepository.findByUserIdOrderByCreatedAtDesc(userId).stream()
+                .map(follow -> blogMapper.toCategory(follow.getCategory()))
+                .toList();
+        List<BlogTagResponse> tags = blogTagFollowRepository.findByUserIdOrderByCreatedAtDesc(userId).stream()
+                .map(follow -> blogMapper.toTag(follow.getTag()))
+                .toList();
+        return new BlogFollowResponse(categories, tags);
+    }
+
+    @Transactional(readOnly = true)
+    public CursorPageResponse<BlogPostCardResponse> personalizedFeed(UserPrincipal principal, String cursor, Integer limit) {
+        UUID userId = requireAuthenticated(principal);
+        int resolvedLimit = resolveLimit(limit);
+        Set<UUID> categoryIds = blogCategoryFollowRepository.findCategoryIdsByUserId(userId);
+        Set<UUID> tagIds = blogTagFollowRepository.findTagIdsByUserId(userId);
+        String filterHash = filterHash("blog-feed|userId=" + userId + "|categories=" + categoryIds + "|tags=" + tagIds);
+        DecodedCursor decodedCursor = decodeCursor(cursor, filterHash);
+        List<BlogPost> window;
+        if (categoryIds.isEmpty() && tagIds.isEmpty()) {
+            window = blogPostRepository.findPublicWindow(
+                    allowedVisibilities(principal),
+                    null,
+                    null,
+                    null,
+                    null,
+                    decodedCursor.sortTime(),
+                    decodedCursor.postId(),
+                    resolvedLimit + 1
+            );
+        } else {
+            window = blogPostRepository.findPersonalizedFeedWindow(
+                    allowedVisibilities(principal),
+                    categoryIds,
+                    tagIds,
+                    decodedCursor.sortTime(),
+                    decodedCursor.postId(),
+                    resolvedLimit + 1
+            );
+        }
+        boolean hasNext = window.size() > resolvedLimit;
+        List<BlogPost> items = hasNext ? window.subList(0, resolvedLimit) : window;
+        String nextCursor = hasNext && !items.isEmpty()
+                ? encodeCursor(items.get(items.size() - 1).getPublishedAt(), items.get(items.size() - 1).getId(), filterHash)
+                : null;
+        internalTelemetryService.record("BLOG_FEED_VIEW", userId, "USER", userId, Map.of(
+                "categoryFollowCount", categoryIds.size(),
+                "tagFollowCount", tagIds.size(),
+                "resultCount", items.size()
+        ));
+        return CursorPageResponse.<BlogPostCardResponse>builder()
+                .items(mapCards(principal, items))
+                .nextCursor(nextCursor)
+                .prevCursor(null)
+                .hasNext(hasNext)
+                .hasPrev(false)
+                .limit(resolvedLimit)
+                .build();
+    }
+
+    @Transactional(readOnly = true)
+    public List<BlogPostCardResponse> recommendations(UserPrincipal principal, String slug, int limit) {
+        return related(principal, slug, limit);
     }
 
     @Transactional
@@ -151,6 +425,38 @@ public class BlogService {
         ));
     }
 
+    @Transactional
+    public void recordBookingStarted(UserPrincipal principal, UUID postId, BlogAuthorCtaClickRequest request) {
+        BlogPost post = blogPostRepository.findById(postId)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy bài blog"));
+        ensureReadable(principal, post);
+        internalTelemetryService.record("BLOG_BOOKING_STARTED", userId(principal), "BLOG_POST", postId, Map.of(
+                "authorUserId", post.getAuthorUser().getId().toString(),
+                "ctaType", request == null || !contentPolicy.hasText(request.ctaType()) ? "BOOK_SESSION" : request.ctaType().trim(),
+                "sessionIdPresent", request != null && contentPolicy.hasText(request.sessionId())
+        ));
+    }
+
+    @Transactional
+    public void recordNotificationClick(UserPrincipal principal, UUID postId, BlogAuthorCtaClickRequest request) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        internalTelemetryService.record("BLOG_NOTIFICATION_CLICK", userId, "BLOG_POST", postId, Map.of(
+                "slug", post.getSlug(),
+                "sessionIdPresent", request != null && contentPolicy.hasText(request.sessionId())
+        ));
+    }
+
+    @Transactional
+    public void recordRecommendationClick(UserPrincipal principal, UUID postId, BlogAuthorCtaClickRequest request) {
+        UUID userId = requireAuthenticated(principal);
+        BlogPost post = loadReadablePost(principal, postId);
+        internalTelemetryService.record("BLOG_RECOMMENDATION_CLICK", userId, "BLOG_POST", postId, Map.of(
+                "slug", post.getSlug(),
+                "sessionIdPresent", request != null && contentPolicy.hasText(request.sessionId())
+        ));
+    }
+
     @Transactional(readOnly = true)
     public List<BlogCategoryResponse> categories() {
         return blogCategoryRepository.findByActiveTrueOrderByDisplayOrderAscNameAsc()
@@ -176,6 +482,83 @@ public class BlogService {
         }
     }
 
+    private BlogPost loadReadablePost(UserPrincipal principal, UUID postId) {
+        BlogPost post = blogPostRepository.findById(postId)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy bài blog"));
+        ensureReadable(principal, post);
+        return post;
+    }
+
+    private BlogPost loadPost(UUID postId) {
+        return blogPostRepository.findById(postId)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy bài blog"));
+    }
+
+    private BlogCategory loadActiveCategory(UUID categoryId) {
+        if (categoryId == null) {
+            throw new BaseException(ErrorCode.BAD_REQUEST, "categoryId không được để trống");
+        }
+        return blogCategoryRepository.findById(categoryId)
+                .filter(BlogCategory::isActive)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy blog category đang active"));
+    }
+
+    private BlogTag loadActiveTag(UUID tagId) {
+        if (tagId == null) {
+            throw new BaseException(ErrorCode.BAD_REQUEST, "tagId không được để trống");
+        }
+        return blogTagRepository.findById(tagId)
+                .filter(BlogTag::isActive)
+                .orElseThrow(() -> new BaseException(ErrorCode.NOT_FOUND, "Không tìm thấy blog tag đang active"));
+    }
+
+    private List<BlogPostCardResponse> mapCards(UserPrincipal principal, List<BlogPost> posts) {
+        if (posts == null || posts.isEmpty()) {
+            return List.of();
+        }
+        Map<UUID, BlogEngagementState> engagement = engagementStates(principal, posts.stream().map(BlogPost::getId).toList());
+        Map<UUID, MentorBlogAuthorSummary> authorSummaries = mentorContentAccessService.getBlogAuthorSummaries(
+                posts.stream().map(post -> post.getAuthorUser().getId()).collect(Collectors.toSet())
+        );
+        return posts.stream()
+                .map(post -> blogMapper.toCard(
+                        post,
+                        engagement.getOrDefault(post.getId(), BlogEngagementState.empty()),
+                        authorSummaries.get(post.getAuthorUser().getId())))
+                .toList();
+    }
+
+    private BlogEngagementState engagementState(UserPrincipal principal, UUID postId) {
+        if (principal == null || postId == null) {
+            return BlogEngagementState.empty();
+        }
+        UUID userId = principal.getPublicId();
+        return new BlogEngagementState(
+                blogPostLikeRepository.existsByPostIdAndUserId(postId, userId),
+                blogBookmarkRepository.existsByPostIdAndUserId(postId, userId)
+        );
+    }
+
+    private Map<UUID, BlogEngagementState> engagementStates(UserPrincipal principal, Collection<UUID> postIds) {
+        if (principal == null || postIds == null || postIds.isEmpty()) {
+            return Map.of();
+        }
+        UUID userId = principal.getPublicId();
+        Set<UUID> liked = blogPostLikeRepository.findLikedPostIds(userId, postIds);
+        Set<UUID> bookmarked = blogBookmarkRepository.findBookmarkedPostIds(userId, postIds);
+        return postIds.stream()
+                .distinct()
+                .collect(Collectors.toMap(Function.identity(), postId -> new BlogEngagementState(liked.contains(postId), bookmarked.contains(postId))));
+    }
+
+    private MentorBlogAuthorSummary authorSummary(BlogPost post) {
+        if (post == null || post.getAuthorUser() == null) {
+            return null;
+        }
+        return mentorContentAccessService.getBlogAuthorSummaries(Set.of(post.getAuthorUser().getId()))
+                .get(post.getAuthorUser().getId());
+    }
+
     private List<BlogVisibility> allowedVisibilities(UserPrincipal principal) {
         List<BlogVisibility> allowed = new ArrayList<>();
         allowed.add(BlogVisibility.PUBLIC);
@@ -195,6 +578,13 @@ public class BlogService {
 
     private UUID userId(UserPrincipal principal) {
         return principal == null ? null : principal.getPublicId();
+    }
+
+    private UUID requireAuthenticated(UserPrincipal principal) {
+        if (principal == null) {
+            throw new BaseException(ErrorCode.UNAUTHENTICATED, "Chưa xác thực người dùng");
+        }
+        return principal.getPublicId();
     }
 
     private String viewerKey(UserPrincipal principal, String sessionId) {
